--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon Go Clone</title>
+    <title>MobFi</title> <!-- Changed title -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -11,6 +11,13 @@
 </head>
 <body>
     <div id="map"></div>
+    <div id="dashboard">
+        <h2>Turf Info</h2> <!-- Changed dashboard title -->
+        <p>Cash: $<span id="cash-amount">0</span></p> <!-- Changed label and ID -->
+        <p>Group: <span id="user-group">None</span></p> <!-- Added group display -->
+        <button id="leave-group-button" style="display: none;">Leave Group</button> <!-- Added leave button -->
+        <!-- More dashboard elements can be added here -->
+    </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
