--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         </div>
     </div>
 
+    <!-- Protection Money Book -->
+    <div id="protection-book" style="display: none;">
+        <h3>Protection Book</h3>
+        <ul id="controlled-businesses-list">
+            <!-- List items will be added here by JS -->
+        </ul>
+    </div>
+
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
