--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
 
     <!-- Protection Money Book -->
     <div id="protection-book" style="display: none;">
+        <button class="minimize-btn" title="Minimize Book">_</button> <!-- Minimize Button -->
         <h3>Protection Book</h3>
         <ul id="controlled-businesses-list">
             <!-- List items will be added here by JS -->
         </ul>
     </div>
+
+    <!-- Button to show the book when minimized -->
+    <button id="show-book-btn" class="show-book-btn" title="Show Protection Book">📖</button>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
