--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="loading-screen">
+        <img src="img/load.jpg" alt="Loading...">
+    </div>
     <div id="map"></div>
     <div id="dashboard">
         <div class="dashboard-header">
