--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <div id="loading-screen">
         <img src="img/load.jpg" alt="Loading...">
+        <div id="loading-bar-container">
+            <div id="loading-bar"></div>
+        </div>
     </div>
     <div id="map"></div>
     <div id="dashboard">
