--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
-    <script src="script.js"></script>
-    <script src="enemy.js"></script> <!-- Include the enemy script -->
+    <script src="enemy.js"></script> <!-- Load enemy logic first -->
+    <script src="script.js"></script> <!-- Load main script after -->
 </body>
 </html>
