--- a/index.html
+++ b/index.html
@@ -252,6 +252,31 @@
         </div>
     </div>
 
+    <!-- How to Play Modal -->
+    <div id="how-to-play-modal" class="modal modal-hidden">
+        <div class="modal-content">
+            <span class="close-btn" id="close-how-to-play-btn">&times;</span>
+            <h2>How to Play MobFi</h2>
+            <div class="how-to-play-content">
+                <p>Welcome to MobFi! Here's a quick guide:</p>
+                <ul>
+                    <li><strong>Explore:</strong> Move around the map using your device's GPS.</li>
+                    <li><strong>Cash Drops:</strong> Tap on money bags (<img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-money-bag-valentines-day-flatart-icons-flat-flatarticons.png" alt="Cash" class="inline-icon">) to collect cash.</li>
+                    <li><strong>Businesses:</strong> Find businesses (<img src="img/business.png" alt="Business" class="inline-icon">) and shops (<img src="img/shop.png" alt="Shop" class="inline-icon">).</li>
+                    <li><strong>Organizations:</strong> Join an organization by visiting their base (<img src="img/org.png" alt="Base" class="inline-icon">).</li>
+                    <li><strong>Protection:</strong> Protect businesses within your organization's territory to earn passive income. Collect profits by tapping the business marker.</li>
+                    <li><strong>Rivals:</strong> Watch out for rival players (<img src="https://img.icons8.com/ios-filled/50/000000/user-secret.png" alt="Rival" class="inline-icon">)! Engage them in battle by tapping their marker.</li>
+                    <li><strong>Combat:</strong> Attack enemies, use items (from Inventory), and try to survive!</li>
+                    <li><strong>Inventory/Equipment:</strong> Manage your items and gear using the bottom bar buttons (🎒, ⚔️).</li>
+                    <li><strong>Stats:</strong> Check your progress and stats (📊).</li>
+                    <li><strong>Dashboard:</strong> Manage your alias, organization, and sound settings (👤).</li>
+                </ul>
+                <p>Good luck, boss!</p>
+                <p>Join us on X: <a href="https://x.com/Web3MOBFI" target="_blank" rel="noopener noreferrer">https://x.com/Web3MOBFI</a></p>
+            </div>
+        </div>
+    </div>
+
     <!-- Battle Modal -->
     <div id="battle-modal" class="modal-hidden">
         <div class="modal-content battle-modal-content">
