--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
     <link rel="stylesheet" href="style.css">
-    <!-- SUI dApp Kit CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/@mysten/dapp-kit@^0.13/dist/index.css" />
+    <!-- SUI dApp Kit CSS Removed -->
 </head>
 <body>
     <div id="loading-screen">
@@ -102,9 +101,7 @@
                     <span id="player-level-bar">Level: 1</span> <!-- Placeholder -->
                 </div>
             </div>
-            <div id="sui-connect-container" style="text-align: center; padding: 5px;">
-                <!-- SUI Connect Button will be rendered here by JS -->
-            </div>
+            <!-- SUI Connect Container Removed -->
             <div id="action-buttons-bar">
                 <button id="action-userinfo-btn" class="action-btn" title="User Info">👤</button> <!-- Placeholder Icon -->
                 <button id="action-stats-btn" class="action-btn" title="Stats">📊</button> <!-- Placeholder Icon -->
@@ -131,10 +128,9 @@
     <script src="uiManager.js"></script>   <!-- UI updates, DOM manipulation, event listeners (depends on map, gameWorld) -->
     <script src="battle.js"></script>      <!-- Battle simulation logic (depends on gameWorld, uiManager) -->
 
-    <!-- SUI Integration -->
-    <script type="module" src="suiIntegration.js"></script> <!-- Added type="module" -->
+    <!-- SUI Integration Removed -->
 
-    <script src="initialization.js"></script> <!-- Loading, map init, game start (needs Shop, gameWorld, uiManager, suiIntegration) -->
+    <script src="initialization.js"></script> <!-- Loading, map init, game start (needs Shop, gameWorld, uiManager) -->
 
 
     <!-- Equipment Modal -->
