--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           crossorigin=""/>
     <link rel="stylesheet" href="style.css">
     <!-- SUI dApp Kit CSS Removed -->
+    <link rel="icon" href="data:,"> <!-- Add dummy favicon link -->
 </head>
 <body>
     <div id="loading-screen">
